# aleph

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
crates/aleph-api/: Cargo.toml
crates/aleph-api/src/: lib.rs  routes.rs
crates/aleph-cli/: Cargo.toml
crates/aleph-cli/src/: listen.rs  main.rs  tui.rs
crates/aleph-core/: Cargo.toml
crates/aleph-core/src/: codecontext.rs  config.rs  db.rs  dedup.rs  embedding.rs  extractor.rs  lib.rs  llm.rs  memory.rs  models.rs  session.rs
crates/aleph-daemon/: Cargo.toml
crates/aleph-daemon/src/: atspi.rs  lib.rs  pipeline.rs
dashboard/: index.html  settings.html
extensions/browser/: background.js  manifest.json  popup.html  popup.js  settings.html
scripts/: aleph-stt.py  aleph-tts.py  aleph-voice.py
tests/: n8n_workflow.json
