[package]
name = "aleph-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aleph-core = { path = "../aleph-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { workspace = true }
