[package]
name = "aleph-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
dirs = "6"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

lancedb = { version = "0.18", optional = true }
arrow-array = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }

[features]
default = []
lancedb-store = ["lancedb", "arrow-array", "arrow-schema"]

[dev-dependencies]
tokio-test = "0.4"
