[package]
name = "aleph-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
aleph-core = { path = "../aleph-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

zbus = "5.5"
xcap = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
